test/resources/nameAnalyzer/failing/UndefinedTypeInModuleA.amy
object Foo
  def foo(): Bar.Baz := 42 end foo
end Foo
